--- a/src/views/admin/certified-bots.ejs
+++ b/src/views/admin/certified-bots.ejs
@@ -60,7 +60,7 @@
          title: 'Succesfull...',
          closeOnConfirm: false,
          text: urlParams.get('message'),
-         footer: 'Copyright 2021 Dumbbotlist.tkn - All right reserved.'
+         footer: 'Copyright 2021 Dumbbotlist.tk - All right reserved.'
         }).then((result) => {
       if (result.isConfirmed) {
         window.location.href = '/admin/certified-bots';
