--- a/src/views/botlist/addbot.ejs
+++ b/src/views/botlist/addbot.ejs
@@ -27,7 +27,7 @@
                   <input type="text" name="botID" id="botID" class="form-control" placeholder="746673633551974456" required="required" value="" />
               </div>
               <div class="form-group">
-                  <label><i class="fad fa-crown"></i> Owner ID<span style="color: rgb(175, 22, 22)">*</span></label>
+                  <label><i class="fad fa-crown"></i> Owner ID (It is generated automatically)<span style="color: rgb(175, 22, 22)">*</span></label>
                   <input type="text" name="ownerID" id="ownerID" class="form-control" placeholder="Bot Sahibi" value="<%= user.id %>" required="required" disabled/>
               </div>
               <div class="form-group">
