--- a/src/views/parts/head.ejs
+++ b/src/views/parts/head.ejs
@@ -26,6 +26,7 @@
             <li class="nav-item">
               <a class="nav-link nvhome" href="/"><i class="fad fa-home mr-1"></i> Home</a>
             </li>
+
             <li class="nav-item">
               <a class="nav-link" href="/bots"><i class="fad fa-robot mr-1"></i> Bots</a>
             <li class="nav-item">
@@ -34,6 +35,9 @@
               </li>
               <li class="nav-item">
               <a class="nav-link" href="/addbot"><i class="fad fa-robot mr-1"></i>Add Bot</a>
+            </li>
+             <li class="nav-item">
+              <a class="nav-link" href="https://docs.dumbbotlist.tk"><i class="fad fa-book mr-1"></i>Docs</a>
             </li>
             <li class="nav-item">
                <a class="nav-link" href="/partners"><i class="fad fa-handshake mr-1"></i> Partners</a>
@@ -59,6 +63,7 @@
                 <div class="dropdown-menu dropdown-menu-right animate slideIn" style="max-width:220px!important;">
                     <a class="dropdown-item" href="/user/<%=user.id %>/"><i class="fa fa-id-card mr-2"></i> Profile</a>
                     <a class="dropdown-item" href="/addbot"><i class="fa fa-paper-plane mr-2"></i> Submit Bot</a>
+                    <a class="dropdown-item" href="/codes"><i class="fa fa-code mr-2"></i> Code Share</a>
                     <a class="dropdown-item" href="/uptime/links"><i class="fa fa-sync-alt mr-2"></i> Uptime</a>
                   
                   <div class="dropdown-divider"></div>
