--- a/src/views/admin/index.ejs
+++ b/src/views/admin/index.ejs
@@ -37,6 +37,8 @@
             <div class="card-body">
                 <div class="row no-gutters align-items-center">
                         <div class="col mr-2">
+                            <div class="text-xs font-weight-bold text-info text-uppercase mb-1">Codes</div>
+                            <div class="h5 mb-0 font-weight-bold text-white"><%= codedata.length %></div>
                         </div>
                         <div class="col-auto">
                             <i class="fas fa-code fa-2x text-white"></i>
