--- a/src/views/botlist/bots.ejs
+++ b/src/views/botlist/bots.ejs
@@ -79,7 +79,7 @@ if (page != 1) {
      title: 'Succesfull...',
      closeOnConfirm: false,
      text: urlParams.get('message'),
-     footer: 'Copyright 2021 &copy hypertown.fun - All right reserved.'
+     footer: 'Copyright 2021 dumbbotlist.tk - All right reserved.'
     }).then((result) => {
   if (result.isConfirmed) {
     window.location.href = `/bot/${urlParams.get('botID')}`;
@@ -91,7 +91,7 @@ if (page != 1) {
      icon: 'error',
      title: 'Oops...',
      text: urlParams.get('message'),
-     footer: 'Copyright 2021 &copy hypertown.fun - All right reserved.'
+     footer: 'Copyright 2021 dumbbotlist.tk - All right reserved.'
     }).then((result) => {
   if (result.isConfirmed) {
     window.location.href = '/addbot';
