--- a/src/views/profile/profile-edit.ejs
+++ b/src/views/profile/profile-edit.ejs
@@ -96,7 +96,7 @@
      title: 'Successful...',
      closeOnConfirm: false,
      text: urlParams.get('message'),
-     footer: 'Copyright 2021 &copy hypertown.fun - All right reserved.'
+     footer: 'Copyright 2021 Dumbbotlist.tk - All right reserved.'
     }).then((result) => {
   if (result.isConfirmed) {
     window.location.href = '/user/<%=req.params.userID%>';
@@ -108,7 +108,7 @@
      icon: 'error',
      title: 'Oops...',
      text: urlParams.get('message'),
-     footer: 'Copyright 2021 &copy hypertown.fun - All right reserved.'
+     footer: 'Copyright 2021 Dumbbotlist.tk - All right reserved.'
     }).then((result) => {
   if (result.isConfirmed) {
     window.location.href = '/user/<%=req.params.userID%>/edit';
