--- a/src/views/profile/profile.ejs
+++ b/src/views/profile/profile.ejs
@@ -19,12 +19,12 @@
             %>
           <% if(cacheServer) {%>
             <%
-            let sitecreatorRole = cacheServer.roles.cache.get(roles.profile.ssitecreator);
+            let sitecreatorRole = cacheServer.roles.cache.get(roles.yonetici);
             let adminRole = cacheServer.roles.cache.get(roles.yonetici);
             let moderatorRole = cacheServer.roles.cache.get(roles.moderator);
             let sponsorRole = cacheServer.roles.cache.get(roles.profile.sponsor);
             let certifiedDeveloper = cacheServer.roles.cache.get(roles.botlist.certified_developer);
-            let partnerRoleCache = cacheServer.roles.cache.get(roles.profile.spartnerRole);
+            let partnerRoleCache = cacheServer.roles.cache.get(roles.profile.partnerRole);
             let supporterRole = cacheServer.roles.cache.get(roles.profile.supporter);
             %>
             <% if (sitecreatorRole) { %>
@@ -43,7 +43,7 @@
             <span data-tooltip="<%=certifiedDeveloper.name%>" data-tooltip-location="top"> <i class="fad fa-badge-check" style="color: <%=certifiedDeveloper.hexColor%>;bottom: -5px; font-size: 26px;"></i></span>
             <% } %>
             <% if (partnerRoleCache) { %>
-            <span data-tooltip="<%=partnerRoleCache.name%>" data-tooltip-location="top"> <span data-tooltip="vCodes Partner" data-tooltip-location="top"><img draggable="false" src="https://img.devsforum.net/tr/img/i9Y7Y1.png" width="32px"></span></span>
+            <span data-tooltip="<%=partnerRoleCache.name%>" data-tooltip-location="top"> <span data-tooltip="Dumb Bots List Partner" data-tooltip-location="top"><img draggable="false" src="https://img.devsforum.net/tr/img/i9Y7Y1.png" width="32px"></span></span>
             <% } %>
             <% if (supporterRole) { %>
             <span data-tooltip="<%=supporterRole.name%>" data-tooltip-location="top"> <i class="fad fa-star" style="color: <%=supporterRole.hexColor%>;bottom: -5px; font-size: 26px;"></i></span>
@@ -157,7 +157,7 @@ var urlParams = new URLSearchParams(window.location.search);
      title: 'Successful...',
      closeOnConfirm: false,
      text: urlParams.get('message'),
-     footer: 'Copyright 2021 &copy hypertown.fun - All right reserved.'
+     footer: 'Copyright 2021 dumbbotlist.tk - All right reserved.'
     }).then((result) => {
   if (result.isConfirmed) {
     window.location.href = `/user/<%= req.params.userID %>`;
