--- a/src/views/uptime/ekle.ejs
+++ b/src/views/uptime/ekle.ejs
@@ -24,7 +24,7 @@
      title: 'Succesfull...',
      closeOnConfirm: false,
      text: urlParams.get('message'),
-     footer: 'Copyright 2021 &copy hypertown.fun - All right reserved.'
+     footer: 'Copyright 2021 Dumbbotlist.tk - All right reserved.'
     }).then((result) => {
   if (result.isConfirmed) {
     window.location.href = '/uptime/links';
@@ -36,7 +36,7 @@
      icon: 'error',
      title: 'Oops...',
      text: urlParams.get('message'),
-     footer: 'Copyright 2021 &copy hypertown.fun - All right reserved.'
+     footer: 'Copyright 2021 Dumbbotlist.tk - All right reserved.'
     }).then((result) => {
   if (result.isConfirmed) {
     window.location.href = '/uptime/add';
