--- a/src/views/servers/section.ejs
+++ b/src/views/servers/section.ejs
@@ -7,7 +7,7 @@
         <img  draggable="false" style="z-index: -1!important;" src="https://cdn.discordapp.com/avatars/849617280245432340/3b11b85c7054df0bcb444ed8480d3dbf.webp?size=4096" width="320" alt="Discord Servers | Discord Bot List">
         </span>
         <center>
-        <h1 class="has-text-white title" style="font-weight: 800;">Dumb Bots List</h1>
+        <h1 class="has-text-white title" style="font-weight: 800;">Dumb Servers List</h1>
         <p class="content has-text-white" style="opacity: 0.6; margin-top: -20px;">Proudly Developed By Dumbiesss</p>
         </center>
             <div>
