--- a/src/views/botlist/addbot.ejs
+++ b/src/views/botlist/addbot.ejs
@@ -62,7 +62,7 @@
           </div>
               <div class="form-group">
                 <label><i class="fad fa-texts"></i> Long Description<span style="color: rgb(175, 22, 22)">*</span></label>
-                  <textarea name="longDesc" id="longDesc" class="form-control" placeholder="HTML supported." minlength="300" required="required" style="width: 100%; height: 300px;"></textarea>
+                  <textarea name="longDesc" id="longDesc" class="form-control" placeholder="HTML And Markdown supported." minlength="300" required="required" style="width: 100%; height: 300px;"></textarea>
               </div>
               <div class="form-group">
                 <label><i class="fad fa-tags"></i> Tags<span style="color: rgb(175, 22, 22)">*</span></label>
