--- a/src/views/parts/foot.ejs
+++ b/src/views/parts/foot.ejs
@@ -2,8 +2,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="Don't you want to add and expand your Discord bots to reach more audiences? Here vCodes are here for you. You can add your Discord bots and get nice codes for your bot from the code sharing section.">
-  <title>Discord Bots | Discord Codes</title>
+  <meta name="description" content="Don't you want to add and expand your Discord bots to reach more audiences? Here dumblist are here for you. You can add your Discord bots and get nice codes for your bot from the code sharing section.">
+  <title>Discord Bots | Discord Codes | Discord Servers</title>
   <link rel="canonical" href="https://dumbbotlist.tk/">
   <meta name="publisher" content="2021, vCodes" />
   <meta property="title" content="Dumb bots | Discord Bots - Codes">
