--- a/src/views/botlist/bot.ejs
+++ b/src/views/botlist/bot.ejs
@@ -236,9 +236,39 @@
         </div>
         <div class="col-xl-8 order-xl-1">
           <div class="card bg-secondary shadow">
+         <% var $ = marked(botdata.longDesc); %>
+          <% if($ == botdata.longDesc) {%>
+         <% var $ = bot.htmll.load(botdata.longDesc) %>
+          <% var $ = $.html() %>
+          <% } %>
+            
+          
+   
             <div style="padding: 1px!important;" class="card-body">
-                <pre translate="no" class="bot"><% let $ = bot.htmll.load(botdata.longDesc) %><%- $.html() %></pre>
+                <pre translate="no" class="bot"><%- $ %></pre>
             </div>
+           
+
+
+            <div id="disqus_thread"></div>
+<script>
+    /**
+    *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+    *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+    
+    var disqus_config = function () {
+    this.page.url = `https://dumbbotlist.tk/bot/${botdata.botID}`;  // Replace PAGE_URL with your page's canonical URL variable
+    this.page.identifier = `$^%^$(#)%$%()#$&%(*#($*#@%(*#(#(JFDNVRHGUIRNGRGRInsigjrig6795747`; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+    };
+    
+    (function() { // DON'T EDIT BELOW THIS LINE
+    var d = document, s = d.createElement('script');
+    s.src = 'https://dumbbotlist.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+    })();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
           </div>
         </div>
       </div>
